# gov-feeds

./: .gitignore  package-lock.json  package.json  tsconfig.json
public/data/: debt_data.json  fred_NationalDebt.json
public/data/dod_awards_json/: Contracts_For_Aug._11_2025.json  Contracts_For_Aug._12_2025.json  Contracts_For_Aug._13_2025.json  Contracts_For_Aug._14_2025.json  Contracts_For_Aug._15_2025.json  Contracts_For_Aug._18_2025.json  Contracts_For_Aug._19_2025.json  Contracts_For_Aug._1_2025.json  Contracts_For_Aug._20_2025.json  Contracts_For_Aug._21_2025.json  Contracts_For_Aug._22_2025.json  Contracts_For_Aug._25_2025.json  Contracts_For_Aug._26_2025.json  Contracts_For_Aug._27_2025.json  Contracts_For_Aug._28_2025.json  Contracts_For_Aug._29_2025.json  Contracts_For_Aug._4_2025.json  Contracts_For_Aug._5_2025.json  Contracts_For_Aug._6_2025.json  Contracts_For_Aug._7_2025.json  Contracts_For_Aug._8_2025.json  Contracts_For_July_28_2025.json  Contracts_For_July_29_2025.json  Contracts_For_July_30_2025.json  Contracts_For_July_31_2025.json  Contracts_For_Sept._10_2025.json  Contracts_For_Sept._11_2025.json  Contracts_For_Sept._12_2025.json  Contracts_For_Sept._15_2025.json  Contracts_For_Sept._16_2025.json  Contracts_For_Sept._2_2025.json  Contracts_For_Sept._3_2025.json  Contracts_For_Sept._4_2025.json  dod_awards_master.json  (+4 more)
scripts/: fetch_dod_awards.py  fetch_usdebt.py  pyproject.toml
src/app/: layout.tsx  page.tsx
src/components/: AboutUsCard.tsx  AutoBreadcrumbs.tsx  ContactUsCard.tsx  FeedOverviewCard.tsx  FlexChart.tsx  Header.tsx  Hero.tsx
(+58 files in other folders)
